# flint-quiz

./: .dockerignore  .gitignore  Makefile  azure.yaml  example-email.md  flint-quiz-architecture.docx  pyproject.toml
.claude/: settings.local.json
.documentation/adr/: 002-single-agent-architecture.md  003-use-cosmos-db-for-session-state.md  004-use-ai-search-for-question-bank.md
.documentation/docs/: ai-agent-development-guidelines.md  coding-standards.md  observability.md  playground.md  refactor-summary.md  rollback.md  secrets.md  spec-audit-report.md
.documentation/specs/: 001-product-requirements.md  007-operational-runbook.md  008-api-contracts.md  009-agent-governance.md
.documentation/tasks/: 004-agent-framework.md  010-deployment.md
.github/workflows/: ci-merge.yml  ci-pr.yml  ci-release.yml  release-gate.yml  security-grep.yml
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
adr/: 001-use-microsoft-agent-framework.md  005-tool-boundary-prevents-answer-leakage.md  006-retention-policy.md
docs/: content-governance.md  deploy-steps.md  governance-consistency-audit.md  implementation-roadmap.md  initial-plan.md  llm-boundary.md  phase-progression.md  pre-public-gate.md  retention.md  voice.md
infra/: README.md  main.bicep  main.json  main.parameters.dev.json  main.parameters.json  main.parameters.prod.json
infra/hooks/: post-deploy-smoke.ps1  post-deploy-smoke.sh  post-provision-rbac.ps1  post-provision-rbac.sh  post-provision.ps1  post-provision.sh  pre-deploy.ps1  pre-deploy.sh
infra/modules/: apim.bicep  appconfig.bicep  audit-archive.bicep  container-apps-env.bicep  container-registry.bicep  cosmos-database.bicep  cosmos.bicep  foundry-mcp-connection.bicep  foundry-project.bicep  hosted-agent.bicep  keyvault.bicep  mcp-server-app.bicep  model-deployment.bicep  observability.bicep  quiz-agent-app.bicep  rbac.bicep  realtime.bicep  resource-group.bicep  search.bicep  seed-loader-job.bicep  storage.bicep  sweeper-job.bicep  uami.bicep
infra/scripts/: create-questions-index.bicep  import-linter.ini  post-deploy-retention-check.ps1  post-deploy-retention-check.sh  questions-index-schema.json  synonyms-en.json  synonyms-es.json  synonyms-fr.json
scripts/: quiz_drive.py
specs/: 002-system-architecture.md  003-data-contracts.md  004-agent-behavior.md  005-security-model.md  006-testing-strategy.md
src/: __init__.py
src/agent/: Dockerfile  __init__.py  __main__.py  agent_thread.py  answer_normalizer.py  chat.py  coverage_fallback.py  defensive_strip.py  dispatcher.py  language_detection.py  quiz_agent.py  resumption.py  timers.py  tools.py  tts_shaper.py
src/common/: exceptions.py
src/data/: __init__.py  audit_archive.py  cosmos_repository.py  erasure.py  erasure_cli.py  keyvault_client.py  language_allowlist.py  models.py  question_search.py  shuffle.py  tool_schemas.py
src/mcp/: Dockerfile  __init__.py  auth.py  server.py
src/observability/: __init__.py  cost.py  events.py  spans.py  telemetry.py
src/seed/: Dockerfile  (+5 more)
tasks/: 001-infrastructure.md  002-ai-search.md  003-cosmos-db.md  005-tools.md  006-voice-realtime.md  007-security.md  008-observability.md  009-testing.md
tests/: README.md  conftest.py  test_channel_switch.py  test_coverage_consent.py  test_explanation_provenance.py  test_gdpr_erasure.py  test_grading.py  test_idempotency.py  test_injection_corpus.py  test_language_resolution.py  test_multilingual_matrix.py  test_negative_scenarios.py  test_no_answer_leakage.py  test_observability.py  test_prompt_hash.py  test_prompt_injection.py  test_prompt_redaction.py  test_refusal_localization.py  test_resumption.py  test_session_state_machine.py  test_timers.py  test_tool_allowlist.py  test_tts_invariants.py  test_voice_normalization.py
tools/: pre_public_gate.py
(+184 files in other folders)
